--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -10,7 +10,7 @@
 
 <% @teams.each do |team| %>
   <tr>
-    <td><%= team.Countries %></td>
+    <td><%= team.Countries.all %></td>
     <td><%= link_to 'Show', team %></td>
     <td><%= link_to 'Edit', edit_team_path(team) %></td>
     <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
