--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -12,8 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :Countries %><br />
-    <%= f.text_field :Countries %>
+    <%= f.label :borough %>
+    <%= collection_select(:borough,
+      :artist_id,
+      Country.all,
+      :id,
+      :name,
+      {:include_prompt => 'Please select'}) 
+
+      # <option value=":id">:name</option>
+    %>
   </div>
   <div class="actions">
     <%= f.submit %>
