got maps working

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,23 +1,8 @@
-<h1>Listing teams</h1>
-
-<table>
-  <tr>
-    <th>Countries</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h2>Choose a team</h2>
 
 <% @teams.each do |team| %>
-  <tr>
-    <td><%= team.Countries.all %></td>
-    <td><%= link_to 'Show', team %></td>
-    <td><%= link_to 'Edit', edit_team_path(team) %></td>
-    <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+
+  <%= link_to team.Countries, team %>
+
+
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Team', new_team_path %>
