--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,21 +1,11 @@
-<%= form_for(@team) do |f| %>
-  <% if @team.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@team.errors.count, "error") %> prohibited this team from being saved:</h2>
-
-      <ul>
-      <% @team.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_for(@teams) do |f| %>
+  
 
   <div class="field">
-    <%= f.label :borough %>
-    <%= collection_select(:borough,
-      :artist_id,
-      Country.all,
+    <%= f.label :team %>
+    <%= collection_select(:Countries,
+      :team_id,
+      Countries.all,
       :id,
       :name,
       {:include_prompt => 'Please select'}) 
