--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,7 +2,9 @@
 <% place = @places.businesses[0] %>
   <%= place.name %>
   <% address = place.location.display_address.join(" ") %>
-  
+  <% latitude = get_coords(address)["lat"] %>
+  <% longitude = get_coords(address)["lng"] %>
+
   
 
 
@@ -13,7 +15,10 @@
     <h1>Random World Cup Pub Crawl Generator</h1>
     <p>Find us during working hours at:</p>
     <div id="map_canvas"></div>
+    <div class="place_info" data-latitude="" data-longitude=""></div>
 
-    <%= link_to "Citymapper", "https://citymapper.com/directions?endname=#{place.name}&endaddress=#{place.location.display_address.join(" ")}" %>
+    <%= link_to "Citymapper", "https://citymapper.com/directions?endcoord=#{latitude},#{longitude}&endname=#{place.name}&endaddress=#{place.location.display_address.join(' ')}", :target => '_blank' %>
 
-    <%= link_to "Google", "https://maps.googleapis.com/maps/api/geocode/json?address=#{place.location.display_address.join(" ")}&key=AIzaSyCC8HiyveEyJTxzksXUco0fBbSb1MqSsA4" %>
+    
+
+
