--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
   <div id="top" class="header">
         <div class="vert-text">
-            <h1>World Cup Pub Crawl</h1>
+            <h1>World Cup Pub Finder</h1>
             <%= yield %>            
         </div>
     </div>
