--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,16 +1,18 @@
-<div id="map-container"> 
- <% @borough %>
+  <% @borough %>
   <% place = @places.businesses[0] %>
     <% address = place.location.display_address.join(" ") %>
     <% latitude = get_coords(address)["lat"] %>
     <% longitude = get_coords(address)["lng"] %>
-      <div id="map_canvas"></div>
-      <div class="place_info" data-latitude="" data-longitude=""></div>
-       <%= place.name %>
-      <address>
-        <%= place.location.display_address.join(" ") %>
-      </address> <br>
-      <%= link_to "Citymapper", "https://citymapper.com/directions?endcoord=#{latitude},#{longitude}&endname=#{place.name}&endaddress=#{place.location.display_address.join(' ')}", :target => '_blank', class:"button" %>
+      <div id="map-container">
+        <div id="map_canvas"></div>
+      </div>
+        <div id="right-side">
+           <div id="name"><%= place.name %></div>
+          <address>
+            <%= place.location.display_address.join(" ") %>
+          </address> <br>
+          <%= link_to "CityMapper", "https://citymapper.com/directions?endcoord=#{latitude},#{longitude}&endname=#{place.name}&endaddress=#{place.location.display_address.join(' ')}", :target => '_blank', class:"button" %>
+      </div>
 </div>
 
 
